--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ services:
   - docker
 
 before_install:
+  - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
+  - curl https://sdk.cloud.google.com | bash > /dev/null;
+  - source $HOME/google-cloud-sdk/path.bash.inc
+  - gcloud components update kubectl
+  - cloud auth activate-service-account --key-file service-account.json
   - docker build -t cygnetops/react-test -f ./client/Dockerfile.dev ./client
 
 script:
