--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,7 @@ before_install:
   - gcloud config set project multi-k8s-295217
   - gcloud config set compute/zone us-east1-b
   - gcloud container clusters get-credentials multi-cluster
-  
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
+script:
+  - docker run -e CI=true theozpal/react-test npm test
